<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/txtTiendaNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/hintTiendaNombre"
        android:maxLength="50" />

    <EditText
        android:id="@+id/txtTiendaCapacidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/spnTiendaTipo"
        android:ems="10"
        android:hint="@string/hintTiendaCapacidad"
        android:inputType="number"
        android:maxLength="2" />

    <EditText
        android:id="@+id/txtTiendaPiquetas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/txtTiendaCapacidad"
        android:ems="10"
        android:hint="@string/hintTiendaPiquetas"
        android:inputType="number"
        android:maxLength="2" />

    <EditText
        android:id="@+id/txtTiendaEstado"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_alignEnd="@+id/btnFecha"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtTiendaPiquetas"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/hintTiendaEstado"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/txtTiendaUltima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtTiendaEstado"
        android:layout_toStartOf="@+id/btnFecha"
        android:editable="false"
        android:ems="10"
        android:hint="@string/hintTiendaFecha"
        android:inputType="none" />

    <Button
        android:id="@+id/btnNuevaTienda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#428bca"
        android:foreground="?selectableItemBackground"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/btnTiendaAdd" />

    <Button
        android:id="@+id/btnFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/txtTiendaUltima"
        android:background="#37BC9B"
        android:foreground="?selectableItemBackground"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/btnTiendaFecha" />

    <Spinner
        android:id="@+id/spnTiendaModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtTiendaNombre"
        android:entries="@array/modelo_tienda"
        android:spinnerMode="dialog" />

    <Spinner
        android:id="@+id/spnTiendaTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spnTiendaModelo"
        android:entries="@array/tipo_tienda"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtTiendaCapacidad"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spnTiendaTipo"
        android:layout_toStartOf="@+id/txtTiendaCapacidad"
        android:gravity="center"
        android:text="@string/txtTiendaCapacidad"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtTiendaEstado"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/txtTiendaPiquetas"
        android:layout_toStartOf="@+id/txtTiendaPiquetas"
        android:gravity="center"
        android:text="@string/txtTiendaPiquetas"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnCancelarModificar_Editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#d9534f"
        android:foreground="?selectableItemBackground"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/btnCancelar" />

</RelativeLayout>