<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/lblTxtoDescript"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/lblTextoVario1"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lblTxtoDescript2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblTxtoDescript"
        android:text="@string/lblTextoVario2"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/txtCorreoOlvidado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/lblTxtoDescript2"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblTxtoDescript2"
        android:ems="10"
        android:hint="@string/lblCorreo"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnPassReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCorreoOlvidado"
        android:layout_centerHorizontal="true"
        android:background="#428bca"
        android:foreground="?selectableItemBackground"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btnReset" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/lblConsejo"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/lblConsejo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtCorreoOlvidado"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/lblConsejo"
        android:textAlignment="center" />

</RelativeLayout>