<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLineaTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTarea"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txxLineaUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCreado"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgLineaDone"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/LineaImg"
        android:src="@drawable/icono_check" />
</LinearLayout>