<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/lblCambioCorreo"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtCorreoNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:hint="@string/hintNuevoCorreo"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnConfirmarCambioCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#428bca"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btnCambiar"
        android:layout_below="@+id/txtCorreoNuevo"
        android:layout_centerHorizontal="true" />

</RelativeLayout>