<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/lblTxtoDescript"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/lblBorrarUsuario1"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnConfirmarBorrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblTxtoDescript"
        android:layout_marginTop="43dp"
        android:background="#428bca"
        android:foreground="?selectableItemBackground"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/btnConfirmarBorrado" />

    <Button
        android:id="@+id/btnCancelarBorrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnConfirmarBorrado"
        android:background="#d9534f"
        android:foreground="?selectableItemBackground"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/btnCancelar" />

</RelativeLayout>