<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/btnModificarInformacion"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/vertical01"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:foreground="?selectableItemBackground"
        android:text="@string/lblModificarCuenta"
        android:textAlignment="textStart" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btnCambiarCorreo"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnCambiarPass"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view1"
        android:foreground="?selectableItemBackground"
        android:text="@string/lblCambiarPass"
        android:textAlignment="textStart" />

    <View
        android:id="@+id/horizontal01"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btnCambiarPass"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnEliminarCuenta"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/horizontal01"
        android:foreground="?selectableItemBackground"
        android:text="@string/lblElimiarUsuario"
        android:textAlignment="textStart" />

    <View
        android:id="@+id/horizontal02"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btnEliminarCuenta"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnCambiarCorreo"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/view1"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/vertical01"
        android:foreground="?selectableItemBackground"
        android:text="@string/lblCambiarCorreo"
        android:textAlignment="textStart" />

    <View
        android:id="@+id/vertical01"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btnModificarInformacion"
        android:background="@android:color/darker_gray" />

</RelativeLayout>